实现扫雷界面初始化
添加jquery库，依此编写M-saolei.js中的init()方法，在M-saolei.html中增加相应<script>标签，并依据在浏览器中的调试结果修改css文件中的内容

--- a/M-saolei.html
+++ b/M-saolei.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 	<title>M-saolei.html</title>
-  
-<link  type="text/css" rel="stylesheet" href="saolei.css"> 
+<script src="jquery-1.4.2.js" type="text/javascript"></script>  
+<link  type="text/css" rel="stylesheet" href="M-saolei.css"> 
 </head>
 <body>
     <div id="menu">
@@ -23,5 +23,6 @@
     </div>
 
     <div id="main"></div>
+    <script src="M-saolei.js" type="text/javascript"></script>  
 </body>
 </html>
