--- a/H-Login.html
+++ b/H-Login.html
@@ -1,17 +1,57 @@
 <html>
   <head>
     <title>Login.html</title>
+<script src="jquery-1.4.2.js" type="text/javascript"></script>
 
+	<script type="text/javascript">
+
+	  function login() {
+	// console.info("点击了登录");
+	var userName = $("#uName").val();
+	// console.info(userName)
+	var userPass = $("#uPass").val();
+
+	var t=1;
+	for(var i=0;i<localStorage.length;i++){
+		var name=localStorage.key(i);
+		var password=localStorage.getItem(name);
+		
+		if(userName==name&&userPass==password){
+			t=0;
+			return true;
+		}
+	}
+
+	if(t==1){
+		alert("用户名或者密码错误");
+		return false;
+	}
+	// console.info(userPass);
+	if (userName == "" || userName == null) {
+		alert("用户名不能为空");
+		return false;
+	} else if (userPass == "" || userPass == null) {
+		alert("密码不能为空");
+		return false;
+	} else {
+		return true;
+	}
+}
+        function tiao() {
+          window.open("zhuce.html","_self");
+        }
+
+     </script>
   </head>
 
   <body>
-	  
+	  <form action="ok.html" method="post" onsubmit="return login();" id="loginForm"> 
     <h3>用户登录</h3>  
     <br /> 用 户 名：<input type="text" name="user.username" id="uName" style="height: 30px;width: 220px;font-size: 20px;" /><br />  
     <br /> 密    码：<input type="password" name="user.password" id="uPass" style="height: 30px;width: 220px;font-size: 20px;" /><br />  
     <br /> <input type="submit" value="登录" style="height: 30px;width: 60px;font-size: 20px;" />       
                <input type="reset" value="重置" style="height: 30px;width: 60px;font-size: 20px;" />  
 			    <input type="button" value="注册" style="height: 30px;width: 60px;font-size: 20px; /> 
-   
+    </form>
   </body>
 </html>
