--- a/H-Login.html
+++ b/H-Login.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <title>Login.html</title>
-<script src="jquery-1.4.2.js" type="text/javascript"></script>
+
+	<script src="jquery-1.4.2.js" type="text/javascript"></script>
 
 	<script type="text/javascript">
 
@@ -45,13 +46,13 @@
   </head>
 
   <body>
-	  <form action="ok.html" method="post" onsubmit="return login();" id="loginForm"> 
+	  <form action="ok.html" method="post" onsubmit="return login();" id="loginForm">  
     <h3>用户登录</h3>  
     <br /> 用 户 名：<input type="text" name="user.username" id="uName" style="height: 30px;width: 220px;font-size: 20px;" /><br />  
-    <br /> 密    码：<input type="password" name="user.password" id="uPass" style="height: 30px;width: 220px;font-size: 20px;" /><br />  
+    <br /> 密    码：  <input type="password" name="user.password" id="uPass" style="height: 30px;width: 220px;font-size: 20px;" /><br />  
     <br /> <input type="submit" value="登录" style="height: 30px;width: 60px;font-size: 20px;" />       
                <input type="reset" value="重置" style="height: 30px;width: 60px;font-size: 20px;" />  
-			    <input type="button" value="注册" style="height: 30px;width: 60px;font-size: 20px; /> 
-    </form>
+			    <input type="button" value="注册" style="height: 30px;width: 60px;font-size: 20px;"onclick="return tiao()" /> 
+ </form>  
   </body>
 </html>
